--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             <p id="status"></p>
         </div>
     </div>
-
+    
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-messaging.js"></script>
+    
     <script src="script.js" defer></script>
     <script src="https://accounts.google.com/gsi/client" defer></script>
 </body>
